--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SAFE Snake</title>
+    <title>Baltic Sea Eel</title>
   </head>
   <body>
     <div id="app"></div>
